[package]
name = "battery-status"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bluest = "0.6.6"
clap = { version = "4.5.8", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
futures = "0.3.30"
lazy_static = "1.5.0"
serialport = "4.4.0"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = "1.9.1"

[target.'cfg(target_os="macos")'.dependencies]
objc2-core-bluetooth = { version = "0.2.2", features = ["all"] }
